default/objects/Comment__c/Comment__c.object-meta.xml
<CustomObject>
    <description>A comment within a conversation.</description>
    <label>Comment</label>
    <nameField>
        <displayFormat>Comment-{00000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>