default/objects/Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The author of this comment.</description>
    <label>Author</label>
    <referenceTo>fHCM2__Team_Member__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>