default/objects/Comment__c/fields/Author_Type__c.field-meta.xml
<CustomField>
    <fullName>Author_Type__c</fullName>
    <description>The role of the comment author. Values are assigned programmatically.</description>
    <label>Author Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>