default/objects/Comment__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <description>The conversation to which this comment belongs.</description>
    <label>Conversation</label>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>