default/objects/Comment__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Date the Comment was created.</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>