default/objects/Comment__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The version number of the Comment Version which represents the current form of this Comment.</description>
    <label>Current Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>